# Project-Playground

./: LICENSE  README.md
OOD/: CMakeLists.txt
OOD/FeedYaUp/: CMakeLists.txt  Customer.cpp  Customer.h  Meal.h  Menu.cpp  Menu.h  Order.cpp  Order.h  System.cpp  System.h  Table.cpp  Table.h  main.cpp
OOD/RockPaperScissors/: Avalanche.cpp  Avalanche.h  Bureaucrat.cpp  Bureaucrat.h  Crescendo.cpp  Crescendo.h  FistfullODollars.cpp  FistfullODollars.h  Human.cpp  Human.h  PaperDoll.cpp  PaperDoll.h  Player.cpp  Player.h  RandomComputer.cpp  RandomComputer.h  Referee.cpp  Referee.h  Toolbox.cpp  Toolbox.h  Tournament.cpp  Tournament.h  main.cpp
OOD/restaurant order system/: Customer.cpp  Customer.h  Meal.cpp  Meal.h  Menu.cpp  Menu.h  Order.cpp  Order.h  System.cpp  System.h  Table.cpp  Table.h  main.cpp
front-end/: 111.html  index.html  script.js  untitle1
front-end/FruitBank/: home.html  index.html  style.css
front-end/react/moviebrowser/: package-lock.json
front-end/react/moviebrowser/public/: index.html
front-end/react/moviebrowser/src/: App.css  App.js
front-end/react/my-app/: package-lock.json  package.json
front-end/react/my-app/src/: App.css  App.js  index.js  myItem.js  myItems.js
full-stack/moviebrowser/: package-lock.json  package.json
full-stack/moviebrowser/public/: index.html
full-stack/moviebrowser/src/: App.js
full-stack/moviebrowser/src/Components/: About.js  Hero.js  Home.js  Navbar.js
tiny projects/py/: BFS.py  Dijkstra.py  deco.py  hello.py  hi.txt
tiny projects/sudoku/: CMakeLists.txt  main.cpp  readme.txt  sudoku.cpp
(+6 files in other folders)
